[package]
name = "iced-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.38.0"
futures = "0.3.31"
# iced = { version = "0.13.1", features = ["canvas", "debug", "tokio", "lazy", "advanced"] }
iced = { git = "https://github.com/iced-rs/iced/", features = ["canvas", "debug", "tokio", "lazy", "advanced"] }
# iced = { version = "0.9", features = ["canvas"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"

# [dependencies.iced]
# git = "https://github.com/iced-rs/iced/"
# rev = "4bbb5cbc1f8b2a0ee8e09be18071368df3ba5bbd"